--- a/backend/package.json
+++ b/backend/package.json
@@ -20,14 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.1",
+    "express-async-handler": "1.2.0",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
     "jwks-rsa": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
-    "pino": "^8.15.1",
-    "pino-http": "^8.4.1",
     "razorpay": "^2.8.6",
     "serverless-http": "^3.2.0",
     "zod": "^3.22.2"
