--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query-devtools": "^5.85.5",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "^7.62.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
-    "@reduxjs/toolkit": "^2.8.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.85.5",
     "@types/node": "^24.3.0",
@@ -29,17 +32,19 @@
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.17",
     "axios": "^1.11.0",
+    "esbuild": "^0.19.2",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.35",
+    "postcss-import": "^16.1.0",
     "react-hot-toast": "^2.6.0",
-    "react-redux": "^9.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^7.8.2",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^3.4.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
